--- a/src/index.css
+++ b/src/index.css
@@ -173,7 +173,7 @@ body{
   position: absolute;
   top: 0;
   left: 0;
-  z-index: 9999;
+  z-index: 80;
   width: 100%;
   height: 100%;
   background-color: #0F1624;
@@ -1164,7 +1164,7 @@ input, textarea{
   .act .menu svg{
     color: black;
     position: relative;
-    z-index: 99;
+    z-index: 80;
   }
   #left{
     width: 85%;
@@ -1179,7 +1179,7 @@ input, textarea{
     display: block;
     font-size: 30px;
     /* color: white; */
-    z-index: 99;
+    z-index: 80;
     
   }
   .nav{
@@ -1300,7 +1300,7 @@ input, textarea{
   }
   .cmenu ul{
     /* position: absolute; */
-    z-index: 99;
+    /* z-index: 99; */
     left: 0px;
     margin: 0;
     padding-top: 10vh;
