--- a/src/index.css
+++ b/src/index.css
@@ -260,7 +260,7 @@ body{
 }
 #bg{
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   overflow: hidden;
   transition: all cubic-bezier(0.19, 1, 0.22, 1) .5s;
   background-color: #0F1624;
@@ -314,7 +314,7 @@ nav #links a:nth-child(2){
 
 #left{
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   /* padding: 100px; */
   display: flex;
   flex-direction: column;
@@ -1769,7 +1769,7 @@ nav #links a:nth-child(2){
     top: 0px;
     
    
-    height: 100vh;
+    min-height: 100vh;
     
     
     
@@ -1824,7 +1824,7 @@ nav #links a:nth-child(2){
     transition: 1s ease;
     
    
-    height: 100vh;
+    min-height: 100vh;
     position: fixed;
     
     
@@ -1840,11 +1840,10 @@ nav #links a:nth-child(2){
     /* background-image:  url(./image/cool.png);  */
     display: flex;
     flex-direction: column;
-    height: 100vh!important;
+    min-height: 100vh;
     justify-content: flex-start;
     width: 200px;
     align-items: center;
-    height: 100vh;
     padding-top: 10vh;
   }
   /* .snav{
@@ -4351,7 +4350,7 @@ margin: 15px 0;
     right: 0;
     bottom: 0;
     width: 100vw;
-    height: 100vh;
+    min-height: 100vh;
     z-index: 1;
     opacity: 0.25;
     pointer-events: none;
@@ -4490,7 +4489,7 @@ body, html {
   right: 0;
   bottom: 0;
   width: 100vw;
-  height: 100vh;
+  min-height: 100vh;
   z-index: 1;
   opacity: 0.3;
   pointer-events: none;
